--- a/board/src/components/List.css
+++ b/board/src/components/List.css
@@ -17,6 +17,7 @@
     padding: 10px;
     border: 1px solid rgb(212, 211, 211);
     border-radius: 5px;
+    margin-right: 5px;
 }
 
 .listTop > table{
